--- a/_notebooks/2020-09-26-predictions and betting strategy.ipynb
+++ b/_notebooks/2020-09-26-predictions and betting strategy.ipynb
@@ -25,8 +25,18 @@
     "It's finally time to put all of this work into practice. This is going to be another long notebook, though. It's a lot of work.\n",
     "> Warning: Do this at your own risk. If you lose money, it's not my problem. Gamble responsibly. If you have think you may have a problem controlling yourself, [get some help](http://www.gamblersanonymous.org/ga/).\n",
     "\n",
-    ">Important: But if you win, you owe me 10%.\n",
-    "\n",
+    ">Important: But if you win, you owe me 10%."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "To make bet recommendations, this notebook needs to do all this:\n",
     "- Download games and odds that have completed\n",
     "- Download today's games and their odds\n",
@@ -40,10 +50,7 @@
     "First, we'll update the data from our web scraping. I've hidden all the code you saw in parts 2 and 3. Click the button to unhide it."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
