--- a/_notebooks/2020-09-22-power rankings and casino odds.ipynb
+++ b/_notebooks/2020-09-22-power rankings and casino odds.ipynb
@@ -22,6 +22,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "|MLB Baseball Prediction Series:|[Part 1](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/2020/09/20/baseball_project.html)|[Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html)|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/2020/09/22/power-rankings-and-casino-odds.html)|[Part 4](https://rdpharr.github.io/project_notes/baseball/hyperopt/xgboost/2020/09/24/model-optimization.html)|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/2020/09/26/predictions-and-betting-strategy.html)|\n",
+    "|-----|------|-----------|---------|----------|------|\n",
+    "\n",
     "Last time, we created a model that performs pretty well just based on the statistics that we downloaded from [baseball-reference.com](http://baseball-reference.com). In this post, we'll extend that model by adding power rankings and casino odds to the model.\n",
     "> Important: You can run this notebook from Colab or Binder using the buttons above, but you'll also need the files we created in Part 2."
    ],
