--- a/_notebooks/2020-09-24-model optimization.ipynb
+++ b/_notebooks/2020-09-24-model optimization.ipynb
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 62%|██████▏   | 624/1000 [1:08:41<34:49,  5.56s/trial, best loss: 0.2343581178197382]  "
+      " 63%|██████▎   | 628/1000 [1:09:03<34:14,  5.52s/trial, best loss: 0.2343581178197382]  "
      ]
     }
    ],
