--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "source": [
     "# Next Up\n",
-    "In [Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html), we'll start building out our historic data and training the model using XGBoost and LightGBM.\n",
+    "In [Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html), we'll start building out our historic data and training the model using XGBoost.\n",
     "\n"
    ],
    "metadata": {
