--- a/_notebooks/2020-09-26-predictions and betting strategy.ipynb
+++ b/_notebooks/2020-09-26-predictions and betting strategy.ipynb
@@ -1106,13 +1106,11 @@
     "### Model Interpretation\n",
     "Above it looks like the algorithm has selected 12 bets for us, with the Kelly formula ranging from <1% of our bankroll to 24%. Let's take a deeper look at each.\n",
     "\n",
-    "In the first, the algorithm says to put 24% of our bankroll on the Nationals. The casino gives them a 57% chance of willing and so will payback only 1.471 for every dollar we bet (\"dollar return\"). Our machine learning model gives them a 68.5% chance, so there's money to be made.\n",
+    "In the first, the algorithm says to put 24% of our bankroll on the Mets. The casino gives them a 57% chance of willing and so will payback only 1.471 for every dollar we bet (\"dollar return\"). Our machine learning model gives them a 68.5% chance, so there's money to be made.\n",
     "\n",
     "In the second, the algo says bet on Seattle, but only 5.8% of the bankroll. We think they are going to lose, but we thing there's a better chance of them winning than the casino does. Because there's a large payback, Kelly says we should make a bet.\n",
     "\n",
-    "In the Seattle game, the casino think they are going to lose, and so does our model. But we give them a much better chance of winning, so it makes sense to bet on the underdog. Especially at that level of return.\n",
-    "\n",
-    "In the Houston game, we don't have pitcher data, so maybe we shoudl not bet on that one.\n",
+    "In the Houston game, we don't have pitcher data, so maybe we should not bet on that one.\n",
     "\n",
     "Etc., etc. I feel like you can take it from here.\n",
     "\n",
