--- a/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
+++ b/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
@@ -223,7 +223,9 @@
     }
    ],
    "source": [
-    "df[[x for x in df.columns if len(x)==3]].isna().sum().sort_values(ascending=True)[:25]"
+    "three_letter_columns = [x for x in df.columns if len(x)==3]\n",
+    "na_counts = df[three_letter_columns].isna().sum()\n",
+    "na_counts.sort_values(ascending=True)[:25]"
    ]
   },
   {
@@ -250,6 +252,7 @@
     }
    ],
    "source": [
+    "# get rid of the 3 matches they didn't predict\n",
     "df.dropna(subset=['BWH','BWD','BWA'], inplace=True)\n",
     "df.shape"
    ]
@@ -271,8 +274,14 @@
     }
    ],
    "source": [
+    "# the lowest odds value is the odds favorite. idxmin tells us the column that is lowest\n",
     "df['favorite'] = df[['BWH','BWD','BWA']].idxmin(axis=1)\n",
-    "(df['favorite'].str[-1]==df['FTR']).mean()"
+    "\n",
+    "# we want the last letter of the column name\n",
+    "df['favorite'] = df['favorite'].str[-1]\n",
+    "\n",
+    "# comparing the favorite to the outcome tells us whether the odds makers were right\n",
+    "(df['favorite']==df['FTR']).mean()"
    ]
   },
   {
