--- a/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
+++ b/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [soccer, benchmark, webscraping, brier, accuracy, calibration]"
+    "- categories: [soccer, benchmark, brier, accuracy, calibration]"
    ]
   },
   {
@@ -21,7 +21,7 @@
     "\n",
     "The first step in this process is getting data on how well the oddsmakers can predict the outcomes of these matches. This establishes the goals any model I make will need to exceed to be successful. [Football-data.co.uk](https://www.football-data.co.uk) is a great site that publishes historical odds from different matchmakers in easy-to-use csv format. So let's pull down their spreadsheets and see how they did.\n",
     "\n",
-    "**Each blog post on this site, including this one, is executable. Use the buttons at the top to run the code on Binder of Colab and get fresh results for yourself.** You can also download it from Github to run the notebook locally."
+    "> Important: This blog post is executable. Use the buttons at the top to run the code on Binder of Colab and get fresh results for yourself. You can also download it from Github to run the notebook locally."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Over 6000 matches should be enough, right? These spredsheets are pretty dense, with 127 columns of information. See their [notes](https://www.football-data.co.uk/notes.txt) for how to decode the column headers.\n",
+    "Over 6000 matches should be enough, right? These spreadsheets are pretty dense, with 127 columns of information. See their [notes](https://www.football-data.co.uk/notes.txt) for how to decode the column headers.\n",
     "\n",
     "Let's see the %ages for home, away and draw results using the 'FTR' (Full Time Result) column"
    ]
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The home team seems to have a 12% advantage over the away team and 25% of matches end in a draw. This has always been pretty frustrating for me as a fan, I hate it when matches end in a draw. Even more when they are scoreless."
+    "The home team seems to have a 12% advantage over the away team and 25% of matches end in a draw. This has always been pretty frustrating for me as a fan, I hate it when matches end in a draw. Even more when they are scoreless. Let's see how often we have scoreless games there are in the dataset."
    ]
   },
   {
@@ -149,7 +149,9 @@
    "source": [
     "OK, that only happens 6.8 percent of the time, but it still feels like a lot to me.\n",
     "\n",
-    "Back to the task at hand - how well do the oddsmakers predict the outcomes of the matches? First we need to find oddsmakers that are consistent throughout our dataset. The averages provided cover less than half of the matches."
+    "Back to the task at hand - how well do the oddsmakers predict the outcomes of the matches? First we need to find oddsmakers that are consistent throughout our dataset. The averages provided cover less than half of the matches.\n",
+    "\n",
+    "Let's see how often we do not have the average odds calculation provided for us by counting N/A's."
    ]
   },
   {
@@ -179,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like most of the columns with the match betting odds are mostly 3 letters long, so we'll use that as as shortcut to compare them"
+    "From the [notes](https://www.football-data.co.uk/notes.txt), it looks like most of the names of columns with the match betting odds are  3 letters long, so we'll use that as a shortcut to compare them. Let's count N/A's for each."
    ]
   },
   {
