--- a/_notebooks/2020-09-24-model optimization.ipynb
+++ b/_notebooks/2020-09-24-model optimization.ipynb
@@ -9,7 +9,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, hyperopt, xgboost]\n",
+    "- categories: [baseball, hyperopt, xgboost, machine learning]\n",
     "- image: images/chart-preview.png"
    ],
    "metadata": {
