--- a/_notebooks/2020-09-26-predictions and betting strategy.ipynb
+++ b/_notebooks/2020-09-26-predictions and betting strategy.ipynb
@@ -15,7 +15,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, webscraping, kelly criterion, xgboost]\n",
+    "- categories: [baseball, webscraping, kelly criterion, xgboost, machine learning]\n",
     "- image: images/chart-preview.png"
    ]
   },
