--- a/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
+++ b/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [soccer, benchmark, brier, accuracy, calibration]"
+    "- categories: [soccer, benchmark, brier, accuracy, calibration, machine learning]"
    ]
   },
   {
