--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -9,7 +9,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, benchmark, webscraping, brier, accuracy, calibration]\n",
+    "- categories: [baseball, benchmark, webscraping, brier, accuracy, calibration, machine learning]\n",
     "- image: images/chart-preview.png"
    ],
    "metadata": {
