--- a/_notebooks/2020-09-22-power rankings and casino odds.ipynb
+++ b/_notebooks/2020-09-22-power rankings and casino odds.ipynb
@@ -15,7 +15,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, webscraping, Elo, Trueskill, Glick]\n",
+    "- categories: [baseball, webscraping, Elo, Trueskill, Glick, machine learning]\n",
     "- image: images/chart-preview.png"
    ]
   },
