--- a/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
+++ b/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
@@ -78,6 +78,7 @@
     "df = pd.DataFrame()\n",
     "for c in csvs:\n",
     "    df = pd.concat([df, pd.read_csv(c)])\n",
+    "df.to_csv(\"football_odds.csv.gzip\", index=False, compression='gzip') # save combined file\n",
     "df.shape"
    ]
   },
