update broken links

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "|MLB Baseball Prediction Series:|[Part 1](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/2020/09/20/baseball_project.html)|Part 2|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/2020/09/22/power-rankings-and-casino-odds.html)|[Part 4](https://rdpharr.github.io/project_notes/baseball/hyperopt/xgboost/2020/09/24/model-optimization.html)|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/2020/09/26/predictions-and-betting-strategy.html)|\n",
+    "|MLB Baseball Prediction Series:|[Part 1](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/machine%20learning/2020/09/20/baseball_project.html)|Part 2|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/machine%20learning/2020/09/22/power-rankings-and-casino-odds.html)|[Part 4](https://rdpharr.github.io/project_notes/baseball/hyperopt/xgboost/machine%20learning/2020/09/24/model-optimization.html)|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/machine%20learning/2020/09/26/predictions-and-betting-strategy.html)|\n",
     "|-----|------|-----------|---------|----------|------|\n",
     "\n",
     "\n",
@@ -1127,7 +1127,7 @@
    "cell_type": "markdown",
    "source": [
     "## Next Up\n",
-    "In [Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/2020/09/22/power-rankings-and-casino-odds.html), we're going to add team power rankings and casino odds to the dataset to improve the results further!"
+    "In [Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/machine%20learning/2020/09/22/power-rankings-and-casino-odds.html), we're going to add team power rankings and casino odds to the dataset to improve the results further!"
    ],
    "metadata": {
     "collapsed": false,
