--- a/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
+++ b/_notebooks/2020-12-26-eurofootball_odds_analysis.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I've started thinking about applying machine learning to betting the European Soccer Leagues. It seems like it's going to be a different problem than my [previous work on baseball](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/2020/09/20/baseball_project.html), as there are 3 possible outcomes for every match (win, lose, draw). But still, I'd like to see if the profitable machine learning process I put together will hold.  \n",
+    "I've started thinking about applying machine learning to betting the European Soccer Leagues. It seems like it's going to be a different problem than my [previous work on baseball](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/machine%20learning/2020/09/20/baseball_project.html), as there are 3 possible outcomes for every match (win, lose, draw). But still, I'd like to see if the profitable machine learning process I put together will hold.  \n",
     "\n",
     "The first step in this process is getting data on how well the oddsmakers can predict the outcomes of these matches. This establishes the goals any model I make will need to exceed to be successful. [Football-data.co.uk](https://www.football-data.co.uk) is a great site that publishes historical odds from different matchmakers in easy-to-use csv format. So let's pull down their spreadsheets and see how they did.\n",
     "\n",
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Except for the aberration in draws at 40%, that's really tight. The MLB baseball project had [0.2358 Brier Score](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/2020/09/20/baseball_project.html). Lower is better in brier land, so this is 10-20% better. \n",
+    "Except for the aberration in draws at 40%, that's really tight. The MLB baseball project had [0.2358 Brier Score](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/machine%20learning/2020/09/20/baseball_project.html). Lower is better in brier land, so this is 10-20% better. \n",
     "\n",
     "MLB Baseball accuracy was about 10% beter than chance, this seems to be 20%.\n",
     "\n",
