--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "|MLB Baseball Prediction Series:|Part 1|[Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html)|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/2020/09/22/power-rankings-and-casino-odds.html)|[Part 4](https://rdpharr.github.io/project_notes/baseball/hyperopt/xgboost/2020/09/24/model-optimization.html)|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/2020/09/26/predictions-and-betting-strategy.html)|\n",
+    "|MLB Baseball Prediction Series:|Part 1|[Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/machine%20learning/2020/09/21/MLB-Part2-First-Model.html)|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/machine%20learning/2020/09/22/power-rankings-and-casino-odds.html)|[Part 4](https://rdpharr.github.io/project_notes/baseball/hyperopt/xgboost/machine%20learning/2020/09/24/model-optimization.html)|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/machine%20learning/2020/09/26/predictions-and-betting-strategy.html)|\n",
     "|-----|------|-----------|---------|----------|------|\n",
     "\n",
     "This is the second season I've been using machine learning to  make predictions and bets. Last year I made good predictions, but I hadn't figured out how to size my bets so I didn't make any money. This year I feel like I have a good strategy for this and it was solidly profitable.\n",
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "source": [
     "# Next Up\n",
-    "In [Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html), we'll start building out our historic data and training the model using XGBoost.\n",
+    "In [Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/machine%20learning/2020/09/21/MLB-Part2-First-Model.html), we'll start building out our historic data and training the model using XGBoost.\n",
     "\n"
    ],
    "metadata": {
