--- a/_notebooks/2020-09-24-model optimization.ipynb
+++ b/_notebooks/2020-09-24-model optimization.ipynb
@@ -49,7 +49,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "|MLB Baseball Prediction Series:|[Part 1](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/2020/09/20/baseball_project.html)|[Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/2020/09/21/MLB-Part2-First-Model.html)|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/2020/09/22/power-rankings-and-casino-odds.html)|Part 4|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/2020/09/26/predictions-and-betting-strategy.html)|\n",
+    "|MLB Baseball Prediction Series:|[Part 1](https://rdpharr.github.io/project_notes/baseball/benchmark/webscraping/brier/accuracy/calibration/machine%20learning/2020/09/20/baseball_project.html)|[Part 2](https://rdpharr.github.io/project_notes/baseball/webscraping/xgboost/brier/accuracy/calibration/machine%20learning/2020/09/21/MLB-Part2-First-Model.html)|[Part 3](https://rdpharr.github.io/project_notes/baseball/webscraping/elo/trueskill/glick/machine%20learning/2020/09/22/power-rankings-and-casino-odds.html)|Part 4|[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/machine%20learning/2020/09/26/predictions-and-betting-strategy.html)|\n",
     "|-----|------|-----------|---------|----------|------|\n",
     "\n",
     "In Part 3, our model was already performing better than the casino's oddsmakers, but it was only 0.6% better in accuracy and calibration was at parity. In this notebook, we'll get those numbers higher by doing some optimization of the hyperparameters and getting more data.\n",
@@ -536,7 +536,7 @@
    "cell_type": "markdown",
    "source": [
     "## Next Up\n",
-    "[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/2020/09/26/predictions-and-betting-strategy.html). Time move on to figuring out how to generate predictions and place bets. We'll use the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion).\n"
+    "[Part 5](https://rdpharr.github.io/project_notes/baseball/webscraping/kelly%20criterion/xgboost/machine%20learning/2020/09/26/predictions-and-betting-strategy.html). Time move on to figuring out how to generate predictions and place bets. We'll use the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion).\n"
    ],
    "metadata": {
     "collapsed": false,
