--- a/_notebooks/2021-01-03-eurofootball_match_scraper.ipynb
+++ b/_notebooks/2021-01-03-eurofootball_match_scraper.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "The philosophy behind this model is this: people have been trying to figure out the best stat for predicting match outcomes for decades, we don't need to create something new. We can base the model on who has the best stats & probably get a great result. We'll also add in the odds from the casinos, but that's later.\n",
     "\n",
-    "Right now, we need to download the stats for all those games. on [fbref.com](http://fbref.com), we see 122 different stats per team per game. Sometimes these are at the player level, sometimes at the team level. For this model, I am going to do all calculations at the team level. You'll see that we'll get a good result.\n",
+    "Right now, we need to download the stats for all those games. On [fbref.com](http://fbref.com) we see 122 different stats per team per game. Sometimes these are at the player level, sometimes at the team level. For this model, I am going to do all calculations at the team level. You'll see that we'll get a good result.\n",
     "\n",
     "This post is just the web scraper. The next post will build and train a model using the odds from the previous post and the matches from this post."
    ]
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell processes the schedule pages since 2017 and grabs the links for each indivual match. Before 2017, the stats on fbref are different, not as complete."
+    "The next cell processes the schedule pages since 2017 and grabs the links for each individual match. Before 2017 the stats on fbref are different, not as complete."
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is the routine that parses the match data. The inline comments give some detail. There is an imporvement needed on to get the full data for the goalkeepers, if more than one is used in the match. This is a pretty rare event, so I haven't written the code to handle it yet."
+    "Here is the routine that parses the match data. The inline comments give some detail. There is an improvement needed on to get the full data for the goalkeepers if more than one is used in the match. This is a pretty rare event, so I haven't written the code to handle it yet."
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is the iterator to parse all of the matches. If there's an error parsing the match, it provides the link. Most of these are delayed matches. I haven't found any other types of problems."
+    "Below is the iterator to parse all of the matches. If there's an error parsing the match, it can provide the link. Most of the errors are matches where no stats are available because the match wasn't played. I haven't found any other types of problems."
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last, we'll save the output to disk."
+    "Since that took a really long time, we'll save the output to disk so we don't have to do it again. Also, we'll need that data in subsequent notebooks."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's 253 columns per match. It's a lot of stats... \n",
+    "That's 251 columns per match. It's a lot of stats...\n",
     "\n",
     "- 5 for game identification: game_id, date, time, home team and away team\n",
     "- 4 for score (score and score_xg, home and away)\n",
