--- a/_notebooks/2021-01-23-eurofootball_match_model.ipynb
+++ b/_notebooks/2021-01-23-eurofootball_match_model.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [soccer, machine learning, , xgboost]"
+    "- categories: [soccer, machine learning, xgboost]"
    ]
   },
   {
