--- a/_notebooks/2021-02-03-jail_charge_clustering.ipynb
+++ b/_notebooks/2021-02-03-jail_charge_clustering.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jail, clusters, networkx]"
+    "- categories: [KMeans, networkx]"
    ]
   },
   {
@@ -1413,7 +1413,7 @@
          "type": "scatter",
          "x": [
           -0.1430137322722045,
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           null
          ],
          "y": [
@@ -1906,7 +1906,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.003249660755718975,
           null
          ],
@@ -1925,7 +1925,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.019055480622721555,
           null
          ],
@@ -1944,7 +1944,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.04383844766888049,
           null
          ],
@@ -1963,7 +1963,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.01920163470326406,
           null
          ],
@@ -1982,7 +1982,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.07777122892150033,
           null
          ],
@@ -2001,7 +2001,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.05303063094586935,
           null
          ],
@@ -2020,7 +2020,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.10167596811213038,
           null
          ],
@@ -2039,7 +2039,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.02084267116064922,
           null
          ],
@@ -2058,7 +2058,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.03789380641572885,
           null
          ],
@@ -2077,7 +2077,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.05252944904713735,
           null
          ],
@@ -2096,7 +2096,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.10088829571345309,
           null
          ],
@@ -2115,7 +2115,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.04241280202420652,
           null
          ],
@@ -2134,7 +2134,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.005378114990313519,
           null
          ],
@@ -2153,7 +2153,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.06979173263158862,
           null
          ],
@@ -2172,7 +2172,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.0760214264582441,
           null
          ],
@@ -2191,7 +2191,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.06091939041589926,
           null
          ],
@@ -2210,7 +2210,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.07898438832333454,
           null
          ],
@@ -2229,7 +2229,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.08090123280112883,
           null
          ],
@@ -2248,7 +2248,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.12578077118493192,
           null
          ],
@@ -2267,7 +2267,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.0999734829972048,
           null
          ],
@@ -2286,7 +2286,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.06474675189953415,
           null
          ],
@@ -2305,7 +2305,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.0814617427293698,
           null
          ],
@@ -2324,7 +2324,7 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           -0.0925685636320743,
           null
          ],
@@ -5845,7 +5845,7 @@
          ],
          "y": [
           0.04410342670829232,
-          -0.0005358357942254387,
+          -5.358357942254387E-4,
           null
          ]
         },
@@ -7815,7 +7815,7 @@
          "x": [
           -0.11598646663197677,
           -0.1430137322722045,
-          -0.0005713800324660864,
+          -5.713800324660864E-4,
           0.003249660755718975,
           -0.10088829571345309,
           0.019055480622721555,
@@ -8038,7 +8038,7 @@
           0.12994702840129826,
           0.1460314232789626,
           -0.020434868038982253,
-          -0.0005358357942254387,
+          -5.358357942254387E-4,
           -0.2355825868115132,
           0.13284180794993972,
           -0.22639216209589147,
