--- a/_notebooks/2021-02-03-jail_charge_clustering.ipynb
+++ b/_notebooks/2021-02-03-jail_charge_clustering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Jail Charge Clusters\n",
-    "> Understanding Charge Groups with network mapping\n",
+    "> Understanding charge groups with network mapping\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When a person enters jail, they are charged with one or several charges. It is difficult ot understand the type of charge - was it drugs? assault? traffic? - from just the individual charge data. This notebook is evaluating a method to group similar charges by analyzing the times multiple crimes were charged for the same arrestee.\n",
+    "When a person enters jail, they are charged with one or several charges. It is difficult to understand the type of charge - was it drugs? assault? traffic? - from just the individual charge data. This notebook is evaluating a method to group similar charges by analyzing the times multiple crimes were charged for the same arrestee.\n",
     "\n",
     "The method relies heavily on network/graph layouts, using the networkx library. We are evaluating a graph, where charges are the nodes and the edges connect to concurrent charges. When we layout this graph, we can clearly see neighborhoods of charges, which we can then utilize clustering algorithms to produce groups.\n",
     "\n",
@@ -9386,7 +9386,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -9403,13 +9407,8 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1,1,figsize=(14,8))\n",
-    "_ = trend_df.groupby(['month','cluster_name']).size().unstack().plot(kind='bar',stacked=True, ax=ax)"
+    "_ = trend_df.groupby(['month','cluster_name']).size().unstack().plot(kind='bar',stacked=True, ax=ax)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
