--- a/_notebooks/2021-02-03-charge_clustering.ipynb
+++ b/_notebooks/2021-02-03-charge_clustering.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [KMeans, networkx]"
+    "- categories: []"
    ]
   },
   {
