--- a/_notebooks/2021-02-03-charge_clustering.ipynb
+++ b/_notebooks/2021-02-03-charge_clustering.ipynb
@@ -9407,8 +9407,20 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1,1,figsize=(14,8))\n",
-    "_ = trend_df.groupby(['month','cluster_name']).size().unstack().plot(kind='bar',stacked=True, ax=ax)\n"
+    "_ = trend_df.groupby(['month','cluster_name']).size().unstack().plot(kind='bar',stacked=True, ax=ax)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%"
+    }
+   }
   }
  ],
  "metadata": {
